feat: wrote structure for marketplace

--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="logo-container">
                 <a href="index.html" class="logo">
-                    <img src="assets/logo.svg" alt="SecureEscrow" class="logo-img">
+                    <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="logo-img">
                     <span>Secure<span class="gold-text">Escrow</span></span>
                 </a>
             </div>
@@ -50,7 +50,7 @@
                 </button>
                 <div class="user-dropdown">
                     <button class="user-avatar">
-                        <img src="assets/user-avatar.jpg" alt="User Avatar">
+                        <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg" alt="User Avatar">
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-menu">
@@ -114,7 +114,7 @@
                     </div>
                     <div class="profile-content">
                         <div class="profile-avatar">
-                            <img src="assets/user-avatar.jpg" alt="User Avatar">
+                            <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg" alt="User Avatar">
                             <div class="verification-badge">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -440,7 +440,7 @@
             <div class="footer-grid">
                 <div class="footer-col footer-about">
                     <div class="footer-logo">
-                        <img src="assets/logo-white.svg" alt="SecureEscrow" class="footer-logo-img">
+                        <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="footer-logo-img">
                         <span>Secure<span class="gold-text">Escrow</span></span>
                     </div>
                     <p class="footer-about-text">
@@ -495,7 +495,7 @@
             
             <div class="footer-bottom">
                 <div class="footer-copyright">
-                    &copy; 2023 SecureEscrow. All rights reserved.
+                    &copy; 2025 SecureEscrow. All rights reserved.
                 </div>
                 <div class="footer-legal">
                     <a href="#" class="footer-link">Terms of Service</a>
