--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <div class="testimonial-author">
                             <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg" alt="Michael T." class="author-avatar">
                             <div class="author-info">
-                                <h4 class="author-name">Michael T.</h4>
+                                <h4 class="author-name">Alex Johnson</h4>
                                 <p class="author-title">E-commerce Entrepreneur</p>
                             </div>
                         </div>
