update: added ui for marketplace

--- a/marketplace.html
+++ b/marketplace.html
@@ -677,7 +677,7 @@
                             <!-- Review 1 -->
                             <div class="review-item">
                                 <div class="review-header">
-                                    <img src="assets/user1.jpg" alt="Reviewer" class="reviewer-avatar">
+                                    <img src="https://images.pexels.com/photos/1130626/pexels-photo-1130626.jpeg" alt="Reviewer" class="reviewer-avatar">
                                     <div class="reviewer-info">
                                         <h4 class="reviewer-name">Sarah Miller</h4>
                                         <div class="review-rating">
@@ -698,7 +698,7 @@
                             <!-- Review 2 -->
                             <div class="review-item">
                                 <div class="review-header">
-                                    <img src="assets/user2.jpg" alt="Reviewer" class="reviewer-avatar">
+                                    <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg" alt="Reviewer" class="reviewer-avatar">
                                     <div class="reviewer-info">
                                         <h4 class="reviewer-name">Michael Chen</h4>
                                         <div class="review-rating">
