--- a/transactions.html
+++ b/transactions.html
@@ -49,7 +49,7 @@
                     <i class="fas fa-moon"></i>
                     <i class="fas fa-sun"></i>
                 </button>
-                <div class="user-dropdown">
+                <!-- <div class="user-dropdown">
                     <button class="user-avatar">
                         <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg" alt="User Avatar">
                         <i class="fas fa-chevron-down"></i>
@@ -59,7 +59,7 @@
                         <a href="#" class="dropdown-item"><i class="fas fa-cog"></i> Settings</a>
                         <a href="#" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Logout</a>
                     </div>
-                </div>
+                </div> -->
                 <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
                     <i class="fas fa-bars"></i>
                 </button>
