update: implemented grid design on hero section

--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Secure <span class="gold-text">Blockchain</span> Escrow Service</h1>
-                <p class="hero-subtitle">Trustless transactions with military-grade encryption and multi-payment options</p>
+                <h1 class="hero-title">
+                    Secure <span class="gold-text">Blockchain</span> Escrow Service
+                </h1>
+                <p class="hero-subtitle">
+                    Trustless transactions with military-grade encryption and multi-payment options
+                </p>
                 <div class="hero-cta">
                     <button class="btn btn-primary btn-lg">Start Secure Transaction</button>
                     <button class="btn btn-outline btn-lg">How It Works</button>
@@ -105,14 +109,18 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="blockchain-visualization">
-                    <div class="blockchain-node"></div>
-                    <div class="blockchain-connection"></div>
-                    <div class="blockchain-node"></div>
-                    <div class="blockchain-connection"></div>
-                    <div class="blockchain-node"></div>
-                    <div class="connection-animation"></div>
-                    <div class="transaction-animation"></div>
+                <div class="security-shield">
+                    <i class="fas fa-shield-alt"></i>
+                    <div class="shield-rings">
+                        <div class="ring ring-1"></div>
+                        <div class="ring ring-2"></div>
+                        <div class="ring ring-3"></div>
+                    </div>
+                </div>
+                <div class="floating-elements">
+                    <div class="float-element"></div>
+                    <div class="float-element"></div>
+                    <div class="float-element"></div>
                 </div>
             </div>
         </div>
