fix: email on dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="logo-container">
                 <a href="index.html" class="logo">
-                    <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="logo-img">
+                    <!-- <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="logo-img"> -->
                     <span>Secure<span class="gold-text">Escrow</span></span>
                 </a>
             </div>
@@ -121,7 +121,7 @@
                         </div>
                         <div class="profile-info">
                             <h3 class="profile-name">Alex Johnson</h3>
-                            <p class="profile-email">alex.johnson@example.com</p>
+                            <p class="profile-email">alex.j@gmail.com</p>
                             <div class="profile-stats">
                                 <div class="stat-item">
                                     <div class="stat-value">87%</div>
@@ -440,7 +440,7 @@
             <div class="footer-grid">
                 <div class="footer-col footer-about">
                     <div class="footer-logo">
-                        <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="footer-logo-img">
+                        <!-- <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="footer-logo-img"> -->
                         <span>Secure<span class="gold-text">Escrow</span></span>
                     </div>
                     <p class="footer-about-text">
