fix: fixed toggle buttons

--- a/education.html
+++ b/education.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="logo-container">
                 <a href="index.html" class="logo">
-                    <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="logo-img">
+                    <!-- <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="logo-img"> -->
                     <span>Secure<span class="gold-text">Escrow</span></span>
                 </a>
             </div>
@@ -139,7 +139,7 @@
                     </div>
 
                     <!-- Guide 2 -->
-                    <div class="guide-card" data-category="guides">
+                    <!-- <div class="guide-card" data-category="guides">
                         <div class="guide-image">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSLdPe8NDD34KHcxc50nPJscTZOmQfrjINbPA&s" alt="2FA Setup">
                         </div>
@@ -157,7 +157,7 @@
                                 <i class="fas fa-coins"></i> Earn 5 ESC
                             </button>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Guide 3 -->
                     <div class="guide-card" data-category="guides">
