--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             </nav>
             
             <div class="header-actions">
-                <button class="theme-toggle" aria-label="Toggle dark mode">
+                <!-- <button class="theme-toggle" aria-label="Toggle dark mode">
                     <i class="fas fa-moon"></i>
                     <i class="fas fa-sun"></i>
-                </button>
+                </button> -->
                 <button class="btn btn-outline auth-btn" id="loginBtn">Login</button>
                 <button class="btn btn-primary auth-btn" id="signupBtn">Sign Up</button>
                 <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
