--- a/marketplace.html
+++ b/marketplace.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="logo-container">
                 <a href="index.html" class="logo">
-                    <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="logo-img">
+                    <!-- <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="logo-img"> -->
                     <span>Secure<span class="gold-text">Escrow</span></span>
                 </a>
             </div>
