--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
               <li><a href="#cta" class="nav-link">Get Started</a></li>
             <li>
                 <div class="mobile-auth-buttons">
-                    <button class="btn btn-outline">Login</button>
-                    <button class="btn btn-primary">Sign Up</button>
+                    <button class="btn btn-outline" id="loginBtn">Login</button>
+                    <button class="btn btn-primary" id="signupBtn">Sign Up</button>
                 </div>
             </li>
         </ul>
