--- a/education.html
+++ b/education.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Loading Overlay -->
-    <div class="loading-overlay">
+    <!-- <div class="loading-overlay">
         <div class="loading-spinner">
             <div class="blockchain-animation">
                 <div class="block"></div>
@@ -21,7 +21,7 @@
             </div>
             <p>Securing Connection...</p>
         </div>
-    </div>
+    </div> -->
 
     <!-- Header -->
     <header class="main-header">
@@ -44,10 +44,10 @@
             </nav>
             
             <div class="header-actions">
-                <button class="theme-toggle" aria-label="Toggle dark mode">
+                <!-- <button class="theme-toggle" aria-label="Toggle dark mode">
                     <i class="fas fa-moon"></i>
                     <i class="fas fa-sun"></i>
-                </button>
+                </button> -->
                 <!-- <div class="user-dropdown">
                     <button class="user-avatar">
                         <img src="assets/user-avatar.jpg" alt="User Avatar">
@@ -503,7 +503,7 @@
                         <button class="btn btn-primary btn-lg">Explore All Resources</button>
                     </div>
                     <div class="cta-image">
-                        <img src="https://images.pexels.com/photos/4145190/pexels-photo-4145190.jpeg" alt="Learn and Earn" />
+                        <!-- <img src="https://images.pexels.com/photos/4145190/pexels-photo-4145190.jpeg" alt="Learn and Earn" /> -->
                     </div>
                 </div>
             </section>
@@ -516,7 +516,7 @@
             <div class="footer-grid">
                 <div class="footer-col footer-about">
                     <div class="footer-logo">
-                        <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="footer-logo-img">
+                        <!-- <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="footer-logo-img"> -->
                         <span>Secure<span class="gold-text">Escrow</span></span>
                     </div>
                     <p class="footer-about-text">
@@ -583,7 +583,7 @@
     </footer>
 
     <!-- Quiz Modal -->
-    <div class="modal" id="quizModal">
+    <!-- <div class="modal" id="quizModal">
         <div class="modal-content large">
             <button class="modal-close">
                 <i class="fas fa-times"></i>
@@ -643,10 +643,10 @@
                 <button class="btn btn-primary">Submit Answer</button>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Earn Reward Modal -->
-    <div class="modal" id="rewardModal">
+    <!-- <div class="modal" id="rewardModal">
         <div class="modal-content small">
             <button class="modal-close">
                 <i class="fas fa-times"></i>
@@ -671,7 +671,7 @@
                 <button class="btn btn-outline btn-block">View Balance</button>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Scripts -->
     <script src="js/main.js"></script>
