--- a/marketplace.html
+++ b/marketplace.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Loading Overlay -->
-    <div class="loading-overlay">
+    <!-- <div class="loading-overlay">
         <div class="loading-spinner">
             <div class="blockchain-animation">
                 <div class="block"></div>
@@ -21,7 +21,7 @@
             </div>
             <p>Securing Connection...</p>
         </div>
-    </div>
+    </div> -->
 
     <!-- Header -->
     <header class="main-header">
@@ -354,7 +354,7 @@
             <div class="footer-grid">
                 <div class="footer-col footer-about">
                     <div class="footer-logo">
-                        <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="footer-logo-img">
+                        <!-- <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="footer-logo-img"> -->
                         <span>Secure<span class="gold-text">Escrow</span></span>
                     </div>
                     <p class="footer-about-text">
@@ -421,7 +421,7 @@
     </footer>
 
     <!-- Create Task Modal -->
-    <div class="modal" id="createTaskModal">
+    <!-- <div class="modal" id="createTaskModal">
         <div class="modal-content large">
             <button class="modal-close">
                 <i class="fas fa-times"></i>
@@ -458,7 +458,7 @@
                             <div class="skills-input">
                                 <input type="text" id="taskSkills" placeholder="Add skills...">
                                 <div class="skills-tags">
-                                    <!-- Added tags will appear here -->
+                                    Added tags will appear here
                                 </div>
                             </div>
                         </div>
@@ -589,11 +589,11 @@
                 </div>
             </form>
         </div>
-    </div>
+    </div> -->
 
     <!-- Task Details Modal -->
-    <div class="modal" id="taskDetailsModal">
-        <div class="modal-content large">
+    <!-- <div class="modal" id="taskDetailsModal"> -->
+        <!-- <div class="modal-content large">
             <button class="modal-close">
                 <i class="fas fa-times"></i>
             </button>
@@ -617,9 +617,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="task-details-content">
+            <!-- <div class="task-details-content">
                 <div class="details-main">
                     <div class="details-section">
                         <h3 class="section-title">Task Description</h3>
@@ -674,7 +674,6 @@
                     <div class="details-section">
                         <h3 class="section-title">Freelancer Reviews</h3>
                         <div class="reviews-list">
-                            <!-- Review 1 -->
                             <div class="review-item">
                                 <div class="review-header">
                                     <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg" alt="Reviewer" class="reviewer-avatar">
@@ -695,7 +694,6 @@
                                 </div>
                             </div>
 
-                            <!-- Review 2 -->
                             <div class="review-item">
                                 <div class="review-header">
                                     <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg" alt="Reviewer" class="reviewer-avatar">
@@ -716,7 +714,6 @@
                                 </div>
                             </div>
 
-                            <!-- Review Form -->
                             <div class="review-form">
                                 <h4>Leave a Review</h4>
                                 <div class="rating-input">
@@ -796,8 +793,8 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-        </div>
+            </div> -->
+        <!-- </div> -->
     </div>
 
     <!-- Scripts -->
