--- a/messaging.html
+++ b/messaging.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Loading Overlay -->
-    <div class="loading-overlay">
+    <!-- <div class="loading-overlay">
         <div class="loading-spinner">
             <div class="blockchain-animation">
                 <div class="block"></div>
@@ -21,14 +21,14 @@
             </div>
             <p>Securing Connection...</p>
         </div>
-    </div>
+    </div> -->
 
     <!-- Header -->
     <header class="main-header">
         <div class="container">
             <div class="logo-container">
                 <a href="index.html" class="logo">
-                    <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="logo-img">
+                    <!-- <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="logo-img"> -->
                     <span>Secure<span class="gold-text">Escrow</span></span>
                 </a>
             </div>
