--- a/disputes.html
+++ b/disputes.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Loading Overlay -->
-    <div class="loading-overlay">
+    <!-- <div class="loading-overlay">
         <div class="loading-spinner">
             <div class="blockchain-animation">
                 <div class="block"></div>
@@ -21,14 +21,14 @@
             </div>
             <p>Securing Connection...</p>
         </div>
-    </div>
+    </div> -->
 
     <!-- Header -->
     <header class="main-header">
         <div class="container">
             <div class="logo-container">
                 <a href="index.html" class="logo">
-                    <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="logo-img">
+                    <!-- <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="logo-img"> -->
                     <span>Secure<span class="gold-text">Escrow</span></span>
                 </a>
             </div>
@@ -381,7 +381,7 @@
             <div class="footer-grid">
                 <div class="footer-col footer-about">
                     <div class="footer-logo">
-                        <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="footer-logo-img">
+                        <!-- <img src="https://img.freepik.com/premium-vector/cyber-security-logo-icon-symbol-vector-illustration-modern-cyber-security-logo_1123785-4541.jpg" alt="SecureEscrow" class="footer-logo-img"> -->
                         <span>Secure<span class="gold-text">Escrow</span></span>
                     </div>
                     <p class="footer-about-text">
@@ -448,7 +448,7 @@
     </footer>
 
     <!-- New Dispute Modal -->
-    <div class="modal" id="disputeModal">
+    <!-- <div class="modal" id="disputeModal">
         <div class="modal-content">
             <button class="modal-close">
                 <i class="fas fa-times"></i>
@@ -507,10 +507,10 @@
                 </div>
             </form>
         </div>
-    </div>
+    </div> -->
 
     <!-- Evidence Upload Modal -->
-    <div class="modal" id="evidenceModal">
+    <!-- <div class="modal" id="evidenceModal">
         <div class="modal-content">
             <button class="modal-close">
                 <i class="fas fa-times"></i>
@@ -543,7 +543,7 @@
                 </div>
             </form>
         </div>
-    </div>
+    </div> -->
 
     <!-- Scripts -->
     <script src="js/main.js"></script>
